Address feedback from Greg